--- a/style.css
+++ b/style.css
@@ -417,3 +417,28 @@ img {
 body {
     color: #000;
 }
+header.active {
+    background: #fff;
+    z-index: 9999;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+header.active img {
+    filter: invert(1);
+}
+
+header.active ul li a {
+    color: #000;
+}
+
+header .container {
+    align-items: center;
+}
+
+header {
+    /* transition: 0.6s all; */
+}
+.rows {
+    max-width: 1580px;
+    margin: auto;
+}
