--- a/media.css
+++ b/media.css
@@ -42,7 +42,7 @@
 
 	.containerInnerSlider .row {
 		display: flex;
-		flex-wrap: nowrap;
+		flex-wrap: wrap;
 	}
 
 	.imgaeContainer {
@@ -115,5 +115,168 @@
 		max-width: max-content;
 		margin: 20px auto 0px;
 		padding: 10px 20px;
+	}
+	.containerInnerSlider .row .col-md-4:nth-child(2) {
+		order: 1;
+	}
+
+	.containerInnerSlider .row .col-md-4:nth-child(1) {
+		order: 2;
+	}
+
+	.containerInnerSlider .row .col-md-4:nth-child(3) {
+		order: 3;
+	}
+
+	.blackPanther li {
+		flex: 0 48%;
+	}
+
+	.blackPanther ul {
+		display: flex;
+		flex-wrap: wrap;
+	}
+
+	.containerInnerSlider .col-md-4:first-child ul li span {
+		padding: 0px;
+		display: block;
+		text-align: center;
+	}
+
+	.containerInnerSlider .col-md-4:first-child ul li {
+		display: block;
+		text-align: center;
+	}
+
+	.blackPanther li img {
+		margin: auto;
+		max-width: initial;
+	}
+
+	.containerInnerSlider .col-md-4:last-child ul li span {
+		padding: 0px;
+		text-align: center;
+		display: block;
+		width: 100%;
+		flex: 0 100%;
+	}
+
+	.blackPanther .slick-dots li {
+		width: 20px !important;
+		height: 15px !important;
+		min-width: auto;
+		flex: 0 15px;
+	}
+	.logoContainer img {
+		max-width: 200px;
+	}
+
+	.logoContainer {
+		left: 20px;
+		right: auto;
+	}
+
+	.menuContainer {
+		position: fixed;
+		top: 60px;
+		bottom: 0;
+		background: #fff;
+		left: 0;
+		right: 0;
+		display: none;
+		flex-wrap: wrap;
+		align-items: flex-start;
+		justify-content: flex-start;
+		height: max-content;
+		box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+	}
+
+	.menuContainer ul li a {
+		color: #000;
+	}
+
+	.menuContainer ul {
+		display: block;
+		margin: auto;
+		flex: 0 100%;
+		width: 100%;
+	}
+
+	.leftMenuContainer {
+		flex: 0 100%;
+	}
+
+	.RightMenuContainer {
+		flex: 0 100%;
+	}
+
+	.hamburger {
+		display: block;
+		width: 30px;
+		height: 20px;
+		position: absolute;
+		right: 20px;
+		/* background: red; */
+	}
+
+	.hamburger span {
+		position: absolute;
+		height: 2px;
+		background: #fff;
+		width: 100%;
+	}
+
+	.hamburger span:nth-child(2) {
+		top: 0;
+		bottom: 0;
+		margin: auto;
+	}
+
+	.hamburger span:nth-child(3) {
+		bottom: 0;
+	}
+
+	.menuContainer a {
+		margin-bottom: 10px;
+		padding-bottom: 10px;
+		border-bottom: 1px solid #ccc;
+		padding-top: 10px;
+	}
+
+	.RightMenuContainer li:last-child a {
+		margin-bottom: 0px;
+	}
+	header {
+		padding: 30px 0px;
+	}
+	.menuContainer.active {
+		display: flex;
+	}
+	.hamburger.active span {
+		transition: 0.6s all;
+	}
+	.hamburger {
+		transition: 0.6s all;
+	}
+	.hamburger.active span:nth-child(2) {display: none;}
+
+	.hamburger.active span:nth-child(3) {
+		top: 0;
+		bottom: 0;
+		margin: auto;
+		transform: rotate(90deg);
+	}
+
+	.hamburger.active span:nth-child(1) {
+		bottom: 0;
+		margin: auto;
+		top: 0;
+	}
+
+	.hamburger.active {
+		transform: rotate(45deg);
+	}
+	header.active .hamburger span {
+		background: #000;
 	}
 }
