--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ header {
     padding: 20px 0px;
 }
 body {
-	margin: 0px;
-	font-family: 'Montserrat', sans-serif;
+    margin: 0px;
+    font-family: 'Montserrat', sans-serif;
 }
 header ul {
     display: flex;
@@ -252,12 +252,24 @@ img {
     color: #fff;
 }
 
-.blackPanther li {
+.blackPanther .row li {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    opacity: 0;
 }
+.containerInnerSlider.slick-active .row li {
 
+    -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
+    clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
+    transform: translateY(-50px);
+    opacity: 0;
+    animation-name: titleAnimation;
+    animation-timing-function: ease;
+    animation-duration: 3s;
+    animation-delay: 0.6s;
+    -webkit-animation-fill-mode: forwards;
+}
 .blackPanther li img {
     max-width: 25%;
 }
@@ -531,4 +543,31 @@ footer {
 
 .containerlistItemsFooter a:hover {
     opacity: 1;
+}
+
+@keyframes titleAnimation {
+  0% {
+    transform: translateY(-50px);
+    opacity: 0;
+    -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
+    clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
+  }
+  20% {
+    transform: translateY(0);
+    opacity: 1;
+    -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
+    clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
+  }
+  80% {
+    transform: translateY(0);
+    opacity: 1;
+    -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
+    clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+    -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
+    clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
+  }
 }
