--- a/media.css
+++ b/media.css
@@ -1,3 +1,228 @@
+@media only screen and (max-width: 1028px) and (min-width: 768px) { 
+
+	.containerInnerSlider .row .col-md-4:nth-child(2) {
+		order: 1;
+	}
+
+	.containerInnerSlider .row .col-md-4:nth-child(1) {
+		order: 2;
+	}
+
+	.containerInnerSlider .row .col-md-4:nth-child(3) {
+		order: 3;
+	}
+
+	.blackPanther li {
+		flex: 0 48%;
+	}
+
+	.blackPanther ul {
+		display: flex;
+		flex-wrap: wrap;
+	}
+
+	.containerInnerSlider .col-md-4:first-child ul li span {
+		padding: 0px;
+		display: block;
+		text-align: center;
+	}
+
+	.containerInnerSlider .col-md-4:first-child ul li {
+		display: block;
+		text-align: center;
+	}
+
+	.blackPanther li img {
+		margin: auto;
+		max-width: initial;
+	}
+
+	.containerInnerSlider .col-md-4:last-child ul li span {
+		padding: 0px;
+		text-align: center;
+		display: block;
+		width: 100%;
+		flex: 0 100%;
+	}
+
+	.blackPanther .slick-dots li {
+		width: 20px !important;
+		height: 15px !important;
+		min-width: auto;
+		flex: 0 15px;
+	}
+	.logoContainer img {
+		max-width: 200px;
+	}
+
+	.menuContainer {
+		position: fixed;
+		top: 60px;
+		bottom: 0;
+		background: #fff;
+		left: 0;
+		right: 0;
+		display: none;
+		flex-wrap: wrap;
+		align-items: flex-start;
+		justify-content: flex-start;
+		height: max-content;
+		box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+	}
+
+	.menuContainer ul li a {
+		color: #000;
+	}
+
+	.menuContainer ul {
+		display: block;
+		margin: auto;
+		flex: 0 100%;
+		width: 100%;
+	}
+
+	.leftMenuContainer {
+		flex: 0 100%;
+	}
+
+	.RightMenuContainer {
+		flex: 0 100%;
+	}
+
+	.hamburger {
+		display: block;
+		width: 30px;
+		height: 20px;
+		position: absolute;
+		right: 20px;
+		/* background: red; */
+	}
+
+	.hamburger span {
+		position: absolute;
+		height: 2px;
+		background: #fff;
+		width: 100%;
+	}
+
+	.hamburger span:nth-child(2) {
+		top: 0;
+		bottom: 0;
+		margin: auto;
+	}
+
+	.hamburger span:nth-child(3) {
+		bottom: 0;
+	}
+
+	.menuContainer a {
+		margin-bottom: 10px;
+		padding-bottom: 10px;
+		border-bottom: 1px solid #ccc;
+		padding-top: 10px;
+	}
+
+	.RightMenuContainer li:last-child a {
+		margin-bottom: 0px;
+	}
+	header {
+		padding: 30px 0px;
+	}
+	.menuContainer.active {
+		display: flex;
+	}
+	.hamburger.active span {
+		transition: 0.6s all;
+	}
+	.hamburger {
+		transition: 0.6s all;
+	}
+	.hamburger.active span:nth-child(2) {display: none;}
+
+	.hamburger.active span:nth-child(3) {
+		top: 0;
+		bottom: 0;
+		margin: auto;
+		transform: rotate(90deg);
+	}
+
+	.hamburger.active span:nth-child(1) {
+		bottom: 0;
+		margin: auto;
+		top: 0;
+	}
+
+	.hamburger.active {
+		transform: rotate(45deg);
+	}
+	header.active .hamburger span {
+		background: #000;
+	}
+	.contentColumn h2 {
+		font-size: 22px;
+	}
+
+	.contentColumn p {
+		font-size: 13px;
+		line-height: normal;
+	}
+
+	.contentColumn a {
+		margin: 10px auto;
+		font-size: 13px;
+	}
+
+	.blog h2 {
+		font-size: 22px;
+	}
+
+	.contentSecder h6 {
+		font-size: 14px;
+	}
+
+	.contentSecder p {
+		font-size: 11px;
+		line-height: normal;
+	}
+
+	footer {
+		padding-top: 50px;
+	}
+
+	.newsLetter h2 {
+		font-size: 22px;
+	}
+
+	.containerlistItemsFooter h5 {
+		font-size: 15px;
+	}
+
+	.containerlistItemsFooter a {
+		font-size: 13px;
+	}
+
+	.icontentProducts h3 a {
+		font-size: 18px;
+	}
+
+	.products h2 {
+		font-size: 22px;
+	}
+
+	.contentBlackPanther h2 {
+		font-size: 22px;
+	}
+
+	.bannerContainer {
+		min-height: auto;
+		padding: 150px 0px 60px;
+	}
+
+	.visionPanda {
+		padding: 50px 0px;
+	}
+
+}
 @media only screen and (max-width: 767px) {
 	.bannerContainer {
 		min-height: auto;
