--- a/janus/style.css
+++ b/janus/style.css
@@ -568,3 +568,36 @@ a.downloadFile img {
     text-decoration: underline;
     opacity: 1;
 }
+.bottomFooterCOntainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #fff;
+    padding: 20px 0px;
+    border-top: 1px solid #cccccc40;
+    margin-top: 50px;
+}
+
+.logoCOntainer p {
+    display: block;
+    color: #fff;
+    font-size: 20px;
+    font-size: 13px;
+    margin: 20px 0px 0px;
+    font-weight: 300;
+}
+
+footer .logoCOntainer {
+    width: auto;
+    height: auto;
+}
+
+.numberCOntainer a {
+    display: flex;
+    align-items: center;
+    color: #fff;
+}
+
+.numberCOntainer a img {
+    margin-right: 20px;
+}
