--- a/janus/style.css
+++ b/janus/style.css
@@ -793,3 +793,64 @@ footer .logoCOntainer {
     bottom: -61px;
     top: auto;
 }
+.flexed {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1920px;
+    margin: auto;
+}
+
+.col1 {
+    flex: 0 50%;
+}
+
+.col2 {flex: 0 50%;padding: 50px;background: #F4F4F4;}
+
+.imageCOntainercol1 img {
+    max-height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: top;
+    height: 100%;
+}
+
+.containerinnerBoxsed h6 {
+    display: flex;
+    align-items: center;
+    font-size: 23px;
+    font-weight: 300;
+    margin-bottom: 20px;
+}
+
+.containerinnerBoxsed h6 img {
+    margin-right: 10px;
+}
+
+.contentContainerJosepgh li span {
+    color: #C88D31;
+}
+
+.contentContainerJosepgh li {
+    display: flex;
+    align-items: center;
+    margin-bottom: 11px;
+    font-weight: 500;
+    color: #484848;
+}
+
+.contentContainerJosepgh li img {
+    margin-right: 12px;
+}
+
+.containerinnerBoxsed {
+    margin-bottom: 40px;
+}
+
+.contentContainerJosepgh h2 {
+    font-size: 42px;
+    margin-bottom: 50px;
+}
+
+.imageCOntainercol1 {
+    height: 100%;
+}
