--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ a:hover {
 }
 
 *:focus {
-    outline: none;
+    outline: none !important;
 }
 
 .row {
@@ -570,4 +570,288 @@ footer {
     -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
     clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
   }
+}
+.bannerPages {
+    min-height: 500px;
+    display: flex;
+    align-items: center;
+    color: #fff;
+    background-size: cover;
+}
+
+.bannerPages h2 {
+    font-size: 36px;
+    font-weight: 600;
+}
+
+.menuContainer li:first-child a {
+    margin-left: 0px;
+}
+
+.menuContainer li:last-child a {
+    margin-right: 0px;
+}
+
+.breadCrubms {
+    display: flex;
+    align-items: center;
+}
+
+.breadCrubms span {
+    margin: 0px 20px;
+}
+
+.breadCrubms a {
+    color: #fff;
+    font-size: 18px;
+}
+
+.contentnazzAbout h2 {
+    font-size: 40px;
+    font-weight: 600;
+    text-transform: uppercase;
+    /* padding: 50px 0px; */
+}
+
+.nazzAbout .row {
+    align-items: center;
+}
+
+.nazzAbout {
+    margin: -203px 0px -200px;
+    position: relative;
+    z-index: 2;
+}
+
+.nazzAbout h2 {
+    margin-bottom: 30px;
+}
+
+.nazzAbout p {
+    font-size: 16px;
+    line-height: 30px;
+}
+
+.mission {
+    position: relative;
+    background: #F3F3F3;
+    padding: 240px 0px 100px;
+    text-align: center;
+}
+
+.mission h2 {
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.mission p {
+    font-size: 18px;
+    line-height: 40px;
+    max-width: 60%;
+    margin: 40px auto 0px;
+}
+
+.brandStory {
+    padding: 100px 0px;
+    /* background: #fff; */
+}
+
+.brandStory .row {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.nazzAbout span {
+    color: #C4C4C4;
+}
+
+.contentBrandStory h2 span {
+    color: #C4C4C4;
+}
+
+.contentBrandStory h2 {
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.contentBrandStory {
+    padding: 30px;
+}
+
+.contentBrandStory p {
+    line-height: 27px;
+    font-size: 15px;
+    margin: 20px 0px 50px;
+}
+
+.calltoactionAbout {
+    min-height: 450px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: #fff;
+    background-size: cover;
+}
+
+.calltoactionAbout p {
+    max-width: 670px;
+    font-size: 20px;
+    line-height: 34px;
+    margin: auto;
+}
+
+.videoContainer img:last-child {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    left: 0;
+    right: 0;
+    z-index: 2;
+    width: 100px;
+    height: 100px;
+}
+
+.videoContainer a {
+    position: relative;
+    display: flex;
+}
+
+.videoContainer img:first-child {
+    position: relative;
+    z-index: -1;
+}
+
+.sliderTestimonials {
+    padding: 50px 0px;
+    text-align: center;
+}
+
+.sliderTestimonials img {
+    /* margin: auto; */
+}
+
+.commas {
+    display: block;
+    margin: 0px auto 30px;
+}
+
+.sliderTestimonials h2 {
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.sliderTestimonials h2 span {
+    color: #C4C4C4;
+}
+
+.contentSlidertestimonials {
+    max-width: 1077px;
+    margin: auto;
+    padding: 0px 10%;
+}
+
+.sliderCOntainerTestimonials {
+    margin: 50px 0px;
+    padding: 0px 50px;
+}
+
+.sliderTestimonials .slick-next {
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    height: 50px;
+    font-size: 0;
+    width: 50px;
+    border-radius: 50%;
+    background: none;
+    border: 2px solid #fff;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    background: url('./images/32.png');
+    background-position: center center;
+    background-repeat: no-repeat;
+    transform: rotate(180deg);
+    background-size: 20px;
+}
+
+.sliderTestimonials .slick-next:hover {
+    background-image: url('./images/33.png');
+    background-color: #000;
+    border-color: #000;
+    transform: none;
+}
+
+.sliderTestimonials .slick-prev {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    height: 50px;
+    font-size: 0;
+    width: 50px;
+    border-radius: 50%;
+    background: none;
+    border: 2px solid #fff;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    background: url('./images/32.png');
+    background-position: center center;
+    background-repeat: no-repeat;
+    
+    background-size: 20px;
+}
+
+.sliderTestimonials .slick-prev:hover {
+    background-image: url('./images/33.png');
+    background-color: #000;
+    border-color: #000;
+    transform: rotate(180deg);
+}
+.contentSlidertestimonials p {
+    font-size: 16px;
+    line-height: 32px;
+}
+
+.authorInfoTestimonials {display: flex;align-items: center;text-align: left;max-width: max-content;margin: 40px auto 0px;}
+
+.imageCOntaienrtestmonialAuthor {
+    width: 80px;
+    height: 80px;
+    overflow: hidden;
+    border-radius: 50%;
+    margin-right: 20px;
+}
+
+.imageCOntaienrtestmonialAuthor img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.authorInforData h6 {
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.authorInforData p {
+    font-weight: 400;
+    color: #A5A5A5;
+    font-size: 15px;
+}
+.videoContainer {
+    max-width: 1920px;
+    margin: auto;
+}
+.bannerPages .row {
+    align-items: center;
+}
+
+.bannerPages img {
+    margin-left: auto;
+    display: block;
+    width: 70%;
 }
