--- a/style.css
+++ b/style.css
@@ -919,18 +919,29 @@ footer {
     cursor:pointer; 
 }
 .quantitys .number{
-    margin:100px;
+    margin: 0;
+    max-width: 220px;
+    display: flex;
 }
 .quantitys .minus, .quantitys .plus{
     width:20px;
     height:20px;
-    background:#f2f2f2;
+    background: #F8F8F8;
     border-radius:4px;
     padding:8px 5px 8px 5px;
-    border:1px solid #ddd;
+    border: 1px solid #EBEBEB;
     display: inline-block;
     vertical-align: middle;
     text-align: center;
+    width: 50px;
+    height: 45px;
+    font-size: 24px;
+    line-height: normal;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 300;
+    border-radius: 0px;
 }
 .quantitys input{
     height:34px;
@@ -941,4 +952,222 @@ footer {
     border-radius:4px;
     display: inline-block;
     vertical-align: middle;
+    height: 45px;
+    border: 1px solid #EBEBEB;
+    font-size: 14px;
+    border-left: 0;
+    border-right: 0;
+    border-radius: 0;
+}
+.usage {
+    padding: 100px 0px;
+    text-align: center;
+    background: #F3F3F3;
+    margin: 50px 0px;
+}
+
+.usage h2 {
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 28px;
+}
+
+.usage p {
+    max-width: 700px;
+    margin: 50px auto 0px;
+    line-height: 30px;
+}
+
+.iconsContainer img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+    object-fit: cover;
+    margin: auto;
+    margin-bottom: 20px;
+}
+
+.iconsContainer p {
+    text-align: center;
+    margin-bottom: 60px;
+    font-size: 15px;
+    font-weight: 400;
+}
+
+.iconsContainer .row {
+    justify-content: center;
+}
+
+.suppliments {
+    padding: 50px 0px;
+    background: #FCFCFC;
+}
+
+.suppliments h2 {
+    text-align: center;
+    margin-bottom: 60px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.productInfo {
+    padding: 50px 0px;
+}
+
+.containerInfoProductPage h2 {
+    font-weight: 600;
+    font-size: 28px;
+}
+
+.reviewsandWritereview {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 20px 0px;
+}
+
+.reviewsandWritereview .fa-star {
+    color: #000;
+    opacity: 0.2;
+}
+
+.reviewsandWritereview span {
+    font-size: 13px;
+    font-weight: 500;
+    margin-left: 10px;
+}
+
+.reviewsandWritereview .fa-star.checked {
+    color: orange;
+    opacity: 1;
+}
+
+.reviewsandWritereview a {
+    color: #6CB34D;
+    font-size: 13px;
+    font-weight: 400;
+    text-decoration: underline;
+}
+
+.priceContaienr {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+p.priceOnSale {
+    color: #6CB34D;
+    font-weight: 600;
+    font-size: 26px;
+}
+
+span.notOnSale {
+    text-decoration: s;
+    text-decoration: line-through;
+    font-weight: 500;
+    color: #BCBCBC;
+    margin-left: 20px;
+}
+
+.descriptions p {
+    line-height: 28px;
+}
+
+.descriptions {
+    margin-bottom: 30px;
+}
+
+.filters label {
+    display: block;
+    font-weight: 600;
+    color: #000;
+}
+
+.filters select {
+    width: 100%;
+    height: 45px;
+    border: 1px solid #DFDFDF;
+    padding: 0px 10px;
+    color: #AEAEAE;
+    font-weight: 500;
+}
+
+.filters {
+    margin-bottom: 30px;
+}
+
+.quantitys label {
+    display: block;
+    font-weight: 600;
+    color: #000;
+}
+
+.number {
+}
+
+.buttonsContainerProduct a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 500;
+}
+
+.addToCart {
+    background: #A6DD47;
+    color: #fff;
+    height: 45px;
+    border: 2px solid #A6DD47;
+    transition: 0.6s all;
+}
+
+.buttonsContainerProduct {
+    margin: 30px 0px;
+}
+
+.addToCart:hover {
+    background: none;
+    color: #A6DD47;
+}
+
+.subsCribe {
+    height: 45px;
+    border: 2px solid #000;
+    color: #000;
+    margin: 10px 0px 0px;
+    font-weight: 500;
+    transition: 0.6s all;
+}
+
+.subsCribe:hover {
+    background: #000;
+    color: #fff;
+}
+
+.buttonsContainerProduct {
+    max-width: 525px;
+}
+
+.socialSharing ul {
+    display: flex;
+    align-items: center;
+}
+
+.socialSharing a {
+    display: block;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #EBEBEB;
+}
+
+.socialSharing li:nth-child(even) {
+    margin: 0px 10px;
+}
+.socialSharing label {
+   display: block;
+   font-weight: 600;
+   color: #000;   
 }
