--- a/media.css
+++ b/media.css
@@ -541,4 +541,312 @@
 		flex: 0 50%;
 		margin-bottom: 20px;
 	}
+	.bannerPages .col-md-6:last-child {
+		display: none;
+	}
+
+	.bannerPages {
+		min-height: auto;
+		padding: 100px 0px 50px;
+	}
+
+	.bannerPages h2 {
+		font-size: 22px;
+	}
+
+	.breadCrubms a {
+		font-size: 14px;
+	}
+
+	.descriptions p {
+		font-size: 13px;
+		line-height: 22px;
+	}
+
+	.reviewsandWritereview span {
+		font-size: 11px;
+	}
+
+	.reviewsandWritereview .fa-star {
+		font-size: 11px;
+	}
+
+	.reviewsandWritereview a {
+		font-size: 11px;
+	}
+
+	.containerInfoProductPage {
+		margin: 20px 0px;
+	}
+
+	.containerInfoProductPage h2 {
+		font-size: 20px;
+	}
+
+	.reviewsandWritereview {
+		margin: 5px 0px;
+	}
+
+	p.priceOnSale {
+		font-size: 20px;
+	}
+
+	span.notOnSale {
+		font-size: 14px;
+	}
+
+	.priceContaienr {
+		margin-bottom: 5px;
+	}
+
+	.filters {
+		margin-bottom: 20px;
+	}
+
+	.descriptions {
+		margin-bottom: 20px;
+	}
+
+	.filters label {
+		font-size: 13px;
+	}
+
+	.quantitys label {
+		font-size: 13px;
+	}
+
+	.buttonsContainerProduct a {
+		font-size: 13px;
+	}
+
+	.socialSharing label {
+		font-size: 13px;
+	}
+
+	.shopPage h2, .productPageContainer .shopPage h2 {
+		font-size: 22px;
+	}
+
+	.usage {
+		margin: 0px;
+		padding: 30px 0px;
+	}
+
+	.usage h2 {
+		font-size: 22px;
+	}
+
+	.usage p {
+		margin: 0px;
+		font-size: 13px;
+		line-height: 22px;
+		opacity: 1;
+		color: #000;
+	}
+
+	.iconsContainer .col-md-4 {
+		max-width: 45%;
+	}
+
+	.iconsContainer .col-md-4 img {
+		width: 70px;
+		height: 70px;
+	}
+
+	.iconsContainer p {
+		font-size: 13px;
+		line-height: normal;
+		font-weight: 400;
+	}
+
+	.iconsContainer {
+		padding: 30px 0px;
+	}
+
+	.iconsContainer .col-md-4:last-child p {margin-bottom: 0px;}
+
+	.suppliments h2 {
+		font-size: 22px;
+		margin-bottom: 20px;
+	}
+
+	.boxContainerSliderSuupliments h6 {
+		font-size: 15px;
+		font-weight: 600;
+	}
+
+	.boxContainerSliderSuupliments p {
+		line-height: 18px;
+		font-size: 11px;
+	}
+
+	.suppliments .slick-dots {
+		margin: 10px auto 0px;
+	}
+
+	.suppliments .slick-dots li {
+		width: 10px;
+		height: 10px;
+	}
+	.sliderLeft img {
+		padding: 10px;
+	}
+
+	.productInfo .row .col-md-6 .row {
+		flex-direction: column-reverse;
+	}
+
+	.productInfo .col-md-6 {
+		padding: 0px;
+	}
+
+	.productInfo .col-md-6 .col-md-3, .productInfo .col-md-6 .col-md-9 {
+		padding: 0px;
+	}
+	.fixedShopProduct p {
+		font-size: 13px;
+		line-height: 22px;
+	}
+
+	.fixedShopProduct h3 {
+		font-size: 16px;
+		margin-bottom: 10px;
+	}
+	.nazzAbout {
+		margin: 20px 0px;
+	}
+
+	.nazzAbout h2 {
+		font-size: 22px;
+		margin-bottom: 10px;
+	}
+
+	.nazzAbout p {
+		font-size: 13px;
+		line-height: 22px;
+	}
+
+	.nazzAbout img {
+		width: 60%;
+		margin: auto;
+	}
+
+	.mission {
+		padding: 40px 0px;
+	}
+
+	.mission h2 {
+		font-size: 22px;
+	}
+
+	.mission p {
+		line-height: 22px;
+		font-size: 13px;
+		font-weight: 500;
+		max-width: 100%;
+		margin: 10px 0px 0px;
+	}
+
+	.brandStory {
+		padding: 20px 0px;
+	}
+
+	.brandStory .container {
+		max-width: 100%;
+		padding: 0px;
+	}
+
+	.brandStory .col-md-6 {
+		padding: 0px;
+	}
+
+	.brandStory img {
+		height: 200px;
+		width: 100%;
+		object-fit: cover;
+		object-position: top;
+		border-radius: 0px;
+	}
+
+	.contentBrandStory h2 {
+		font-size: 22px;
+	}
+
+	.contentBrandStory p {
+		line-height: 22px;
+		font-size: 13px;
+		margin-bottom: 0px;
+	}
+
+	.calltoactionAbout {
+		min-height: auto;
+		padding: 50px 0px;
+	}
+
+	.calltoactionAbout p {
+		font-size: 13px;
+		line-height: 22px;
+	}
+
+	.brandStory:nth-child(2) .row {
+		flex-direction: column-reverse;
+	}
+
+	.videoContainer {
+	}
+
+	.videoContainer img:last-child {
+		width: 40px;
+		height: 40px;
+	}
+
+	.sliderTestimonials h2 {
+		font-size: 22px;
+		line-height: normal;
+	}
+
+	.contentSlidertestimonials p {
+		font-size: 12px;
+		line-height: normal;
+	}
+
+	.imageCOntaienrtestmonialAuthor {
+		width: 40px;
+		height: 40px;
+	}
+
+	.authorInforData h6 {
+		font-size: 12px;
+		font-weight: 600;
+	}
+
+	.contentSlidertestimonials p {
+		font-size: 11px;
+		line-height: normal;
+	}
+
+	.sliderTestimonials .slick-next, .sliderTestimonials .slick-prev {
+		width: 30px;
+		height: 30px;
+	}
+
+	.sliderTestimonials .slick-next, .sliderTestimonials .slick-prev {
+		background-size: 10px;
+	}
+
+	.commas {
+		width: 30px;
+		margin-bottom: 20px;
+	}
+
+	.sliderCOntainerTestimonials {
+		margin: 20px 0px 0px;
+	}
+
+	.contentnazzAbout {
+		text-align: center;
+	}
+	div#brandStory2 .row {
+		flex-direction: column-reverse;
+	}
 }
