--- a/style.css
+++ b/style.css
@@ -1498,3 +1498,133 @@ span.notOnSale {
 .mapContainer {
     margin: 50px 0px 0px;
 }
+
+/* */
+
+.panel-default>.panel-heading {
+  color: #333;
+  background-color: #fff;
+  border-color: #e4e5e7;
+  padding: 0;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.panel-default>.panel-heading a {
+  display: block;
+  padding: 10px 15px;
+  color: #000 !important;
+  font-size: 18px;
+  background: none;
+  color: #000;
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: normal;
+  padding-left: 30px;
+}
+
+.panel-default>.panel-heading a:after {
+  content: "";
+  position: absolute;
+  top: 1px;
+  display: inline-block;
+  /* font-family: 'Glyphicons Halflings'; */
+  /* font-style: normal; */
+  /* font-weight: 400; */
+  /* line-height: 1; */
+  /* -webkit-font-smoothing: antialiased; */
+  -moz-osx-font-smoothing: grayscale;
+  /* float: right; */
+  transition: transform .25s linear;
+  /* -webkit-transition: -webkit-transform .25s linear; */
+  left: 0;
+  top: 16px;
+  width: 6px;
+  border: 2px solid #000;
+  font-size: 0;
+  height: 6px;
+  transform: rotate(405deg) !important;
+  border-left: 0;
+  border-top: 0;
+}
+
+.panel-default>.panel-heading a[aria-expanded="true"] {
+  background: none;
+  color: #000;
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: normal;
+  padding-left: 30px;
+}
+
+.panel-default>.panel-heading a[aria-expanded="true"]:after {
+  /* content: "\2212"; */
+  /* -webkit-transform: rotate(180deg); */
+  transform: rotate(45deg);
+}
+
+.panel-default>.panel-heading a[aria-expanded="false"]:after {
+  /* content: "\002b"; */
+  /* -webkit-transform: rotate(90deg); */
+  transform: rotate(-40deg) !important;
+}
+.faqPages {
+    padding: 50px 0px 100px;
+}
+
+.faqPages h2 {
+    font-size: 32px;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin-bottom: 50px;
+}
+
+.faqPages ul#myTab {
+    display: block;
+}
+
+.faqPages ul#myTab a {
+    opacity: 0.3;
+    color: #000;
+    border: none;
+    font-weight: 500;
+    display: block;
+    margin-bottom: 10px;
+}
+
+.faqPages ul#myTab a.active {
+    color: #000;
+    opacity: 1;
+}
+
+.faqPages ul#myTab {
+    border: none;
+}
+.tabCOntainerFaq h2 {
+    text-align: left;
+    font-weight: 600;
+    font-size: 22px;
+}
+
+h4.panel-title {
+    position: relative;
+}
+
+.panel-body p {
+    margin-bottom: 25px;
+    padding: 0px 30px;
+    font-size: 14px;
+    line-height: 27px;
+    font-weight: 400;
+}
+.tabCOntainerFaq .container h2 {
+    margin-top: 50px;
+    margin-bottom: 20px;
+}
+
+.tabCOntainerFaq .container:first-child h2 {
+    margin-top: 0px;
+}
