--- a/rais/style.css
+++ b/rais/style.css
@@ -240,3 +240,68 @@ div#boxCOntainerSection3:hover .boxInnerContainer {
 .productContainer p {
     margin: 0;
 }
+.notJustProducts {
+    background: #FFFBEB;
+    padding: 40px 0px;
+}
+
+.notJustProducts .row {
+    align-items: center;
+}
+
+.notJustProducts h2 {
+    font-size: 32px;
+    font-weight: 500;
+    margin-bottom: 30px;
+}
+
+.notJustProducts p {
+    margin-bottom: 30px;
+    line-height: 27px;
+    font-size: 16px;
+}
+
+.notJustProducts a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #000;
+    color: #fff;
+    padding: 10px 40px;
+    max-width: max-content;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-weight: 400;
+    border: 2px solid #000;
+    transition: 0.7s all;
+}
+
+.notJustProducts a:hover {
+    background: none;
+    color: #000;
+}
+
+.notJustProducts img {
+    width: 80%;
+    margin: auto;
+}
+
+.becomeAMember {
+    background-size: cover;
+    min-height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.joing {max-width: 500px;margin-left: auto;}
+
+.joing h2 {
+    font-weight: 400;
+    margin-bottom: 30px;
+}
+
+.joing p {
+    font-size: 16px;
+    margin-bottom: 30px;
+}
